package DataStruct;

public enum ProductionMethod {
    SELF,
    OUTSOURCING
}
